--- a/src/Pinyin4net/Pinyin4net.csproj
+++ b/src/Pinyin4net/Pinyin4net.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Pinyin4net</RootNamespace>
-    <AssemblyName>DianDi.Pinyin4net</AssemblyName>
+    <AssemblyName>Dian.Pinyin4net</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
