--- a/src/Pinyin4net/Pinyin4net.nuspec
+++ b/src/Pinyin4net/Pinyin4net.nuspec
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package >
   <metadata>
-    <id>DianDi.Pinyin4net</id>
-    <version>1.0.0.3</version>
+    <id>Dian.Pinyin4net</id>
+    <version>1.0.0.0</version>
     <title>Dian.Pinyin4net</title>
     <authors>HuangShengnan</authors>
     <owners>HuangShengnan</owners>
